# icfpcon-perth13

./: .gitignore  README.md
F# Evaluator/: Parser.fs  Program.fs  Type.fs
Glue/: find-em.py  gen-eval-test-io.py  grab-train.py  problems-bysize.txt  problems.json  search-problems.py  server.py
Glue/actuals/: 03-not-8tqtVjRBLsqRKVAq0Z4vSoJY.inout  03-not-Jc2DoMVu8xWAmyNe38ivNiU2.inout  03-not-YYlAoMpWriLP0g7el2yEJf8i.inout  03-not-mN2sobCRcslJxtXNnIwA9QpV.inout  03-not-mN2sobCRcslJxtXNnIwA9QpV.inout.hbv  03-not-nR8zEXy1ZknPyZyNL1k7ClyF.inout  03-not-rZ8fTBdACaydcNidZUuRWzHA.inout  03-shl1-5vege1B5NOPh6K0fVYKkJppB.inout  03-shl1-BdEeBAaZ1AUSaLK0adwHEORS.inout  03-shl1-ja7hvX2MmqcHtXdCF6Noqunn.inout  03-shl1-ja7hvX2MmqcHtXdCF6Noqunn.inout.hbv  03-shr1-186Uqxb6263L1hPF3VESndQy.inout  03-shr1-AACtdIOWRTYPh3t1uFJwFKwy.inout  03-shr1-tBG3CGBJaOPamzBBXyWDO4EB.inout  03-shr1-tBG3CGBJaOPamzBBXyWDO4EB.inout.hbv  03-shr1-yUIMRUmK6x2eLwl57uFwheVf.inout  03-shr16-4x03LEc3wc5iqvCxfhwxBqRX.inout  03-shr16-4x03LEc3wc5iqvCxfhwxBqRX.inout.hbv  03-shr16-cnMab0tQQrqAGc394QxVFKu3.inout  03-shr16-d4wBikk9tHbW6mFnruUKOM5Q.inout  03-shr16-nsU1NyfEWlnBKypLWSyz34hC.inout  03-shr16-qpzRmA7kIcAC3u2qtbwRN0la.inout  03-shr4-e5QLsCeOddPXl4rIiNQJyc0S.inout  (+338 more)
fs-eval/: Deparser.fs  Makefile  Parser.fs  Program.fs  Satisfier.fs  Solver.fs  Type.fs  fs-icfp13.fsproj
hbv/: LICENSE  hbv.cabal  run-all.sh
hbv/src/: Main.hs
hbv/src/Data/: BV.hs
hbv/src/Data/BV/: BruteForce.hs  Eval.hs  Explore.hs  Parser.hs  SMT.hs  SMTEval.hs  Test.hs  Types.hs
hbv/tests/: id.txt  shr4.txt
(+672 files in other folders)
