name:          hbv
version:       0.1.0.0
license:       BSD3
license-file:  LICENSE
author:        Perth ICFP 2013 Team
category:      Language
build-type:    Simple
cabal-version: >=1.8

executable hbv
  main-is: Main.hs
  hs-source-dirs: src
  build-depends:
      base       == 4.6.*
    , atto-lisp  == 0.2.*
    , attoparsec == 0.10.*
    , bytestring == 0.10.*
    , QuickCheck == 2.6.*
    , text       == 0.11.*
